--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
     "chess": "^1.1.0",
     "chess.js": "0.10.2",
     "chessboardjsx": "^2.0.1",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.1",
     "react-scripts": "^5.0.1",
     "roughjs": "2.1.3",
+    "socket.io": "^4.6.1",
     "socket.io-client": "^4.6.1",
     "web-vitals": "^2.1.4"
   },
