--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^1.4.0",
     "chess": "^1.1.0",
     "chess.js": "0.10.2",
     "chessboardjsx": "^2.0.1",
